Implemented general JWT Authorization.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Local": "Server=localhost;Database=site_cauldron_dev;Trusted_Connection=True;"
   },
+  "AuthInfo": {
+    "SecretKey": "this_is_our_secret_key_for_authorizing_site_cauldron_endpoints",
+    "ValidIssuer": "nobody",
+    "ValidAudience":  "everybody"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
