Updated .gitignore with VSCode folder. Added MySQL dependency and default connection string.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Local": "Server=localhost;Database=site_cauldron_dev;Trusted_Connection=True;"
+    "Local": "Server=localhost;Database=site_cauldron_dev;Trusted_Connection=True;",
+    "LocalMySQL": "server=localhost;database=site_cauldron_dev;user=root;password=root"
   },
   "AuthInfo": {
     "SecretKey": "this_is_our_secret_key_for_authorizing_site_cauldron_endpoints",
